themes/default/css/global.css
/* ... */
/*
=========================
=====Reusable Styles=====
=========================
*/

/* All floats within this will be contained to it */
.float_surrounder {
	overflow: hidden;
}

/* Commonly used to indicate there is no content to display */
.nothing_here, .more_here {
	font-size: 13px !important; /* px not em due to careful background positioning */
	padding-{!en_left}: 15px !important;
	margin: 1.5em;
	margin-{!en_left}: 10px !important;
	background-image: url('{$IMG_INLINE;,1x/cannot_show}');
	background-position: {!en_left} center;
	background-repeat: no-repeat;
}
@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
	.nothing_here, .more_here {
		background-image: url('{$IMG_INLINE;,2x/cannot_show}');
		background-size: 9px 6px;
	}
}

/* Used for styling the 'last edited' information */
.edited {
	font-size: 0.85em;
	padding-{!en_left}: {$?,{$MOBILE},0.7,2}em;
	font-style: italic;
}
div.edited {
	margin: 2em 0;
}

/* Usage guide: Use on the immediate surrounding element, and make sure that there is no loose text inside (put that in a span) */
.vertical_alignment, .vertical_alignment>* {
	vertical-align: middle !important;
}

/* Used to align inline images to the top of the rendering context */
.top_vertical_alignment, .top_vertical_alignment * {
	vertical-align: top;
}

/* Used to align a back to top image beside screen item buttons */
.back_to_top_by_buttons {
	padding-top: 4px;
}

/* Used to align next to a floated button(s) */
.vertical_alignment_buttons {
	line-height: 1.9em;
}


/* Makes an item of media (e.g. an image) get framed nicely. NB: We do not use this for galleries (which are more elaborate), although that has similar styling with .gallery_grid_cell */
.media_box {
	margin: {$?,{$MOBILE},1,1.5}em 0;
	text-align: center;
}
.media_box a {
	outline: 0;
}
.media_box>a>img, .media_box>img {
	border: 1px solid {$GET,standard_border};
	{$BETA_CSS_PROPERTY,box-sizing: border-box;}
	{$BETA_CSS_PROPERTY,box-shadow: 3px 3px 10px {$GET,standard_border};}
}
.media_box>a>img:not([width]):not([height]), .media_box>img:not([width]):not([height]) {
	max-width: 100%;
	height: auto;
}

.scale_down { /* Membership of this class is used as a tag to turn on image scale-to-fit */
	{$BETA_CSS_PROPERTY,box-sizing: border-box;}
}
.scale_down:not([width]):not([height]) {
	max-width: 100%;
	height: auto;
}

/* Used in a few places to make member links stand out */
a.fancy_user_link em {
	text-shadow: 2px 2px 2px {$GET,point_of_interest_border};
	padding: 4px 0;
	letter-spacing: 1px;
}
a.fancy_user_link, a.fancy_user_link:visited, a.fancy_user_link:hover {
	font-size: 1em;
	font-weight: bold;
	border: 1px dashed {$GET,point_of_interest_border};
	border-left: 0;
	border-right: 0;
	display: block;
	background-color: {$GET,point_of_interest_background};
	margin-bottom: 7px;
	text-decoration: none;
	padding: 2px 2px !important;
}
.post_poster a.fancy_user_link, .post_poster a.fancy_user_link:visited, .post_poster a.fancy_user_link:hover {
	display: inline-block;
}
a.fancy_user_link:hover {
	border-color: {$GET,dark_border};
	background-color: {$GET,area_faded_background};
}

/* A button styled to look like a link */
body input.button_hyperlink, body input.button_hyperlink:hover {
	border-style: none !important;
	background-color: transparent !important;
	background-image: none !important;
	/*font-weight: bold !important;*/
	border-radius: 0 !important;
	border: 0 !important;
	margin: 0 !important;
	padding: 0 !important;
	cursor: pointer !important;
	text-align: {!en_left} !important;
	vertical-align: baseline !important;
	/*color: inherit !important;*/
	text-decoration: underline;
}

/* Used to make a button look more like an icon - i.e. undoes button-face styling */
.button_icon {
	background: none;
	border: none;
	cursor: pointer;
}

.help_icon {
	cursor: pointer;
	margin-left: 0.5em;
}

/* Makes a link tag (a) look like it's not anything special (we use these tags as tab points sometimes) */
.non_link,
.non_link:visited,
.non_link:hover {
	color: inherit !important;
	text-decoration: none !important;
	cursor: inherit !important;
	font-size: 1em !important;
}

.trinav_wrap {
	overflow: hidden;
	{$BETA_CSS_PROPERTY,background-image: linear-gradient(to bottom\, {$GET,main_2_background}\, {$GET,main_background});}
	/*{+START,IF,{$NOT,{$MOBILE}}}*/
		margin-bottom: 2em;
	/*{+END}*/
	{$BETA_CSS_PROPERTY,border-radius: 20px;}
	color: {$GET,heading_text};
}
.trinav_wrap.nograd {
	background-image: none;
}

/* Used e.g. for "paginating" through the calendar (i.e. infinite pagination left/right) */
.trinav_left, .trinav_mid, .trinav_right {
	margin: 1em 0 2em 0;
}
.trinav_left {
	float: left;
	/*{+START,IF,{$NOT,{$MOBILE}}}*/
		margin-left: 2em;
	/*{+END}*/
	/*{+START,IF,{$MOBILE}}*/
		width: 110px;
		margin-left: 0.5em;
	/*{+END}*/
	text-align: left;
}
.trinav_mid { /* Used for putting a button in the middle of the left/right pagination, for example */
	text-align: center;
}
.trinav_mid.text {
	/*{+START,IF,{$NOT,{$MOBILE}}}*/
		padding-top: 6px;
	/*{+END}*/
	/*{+START,IF,{$MOBILE}}*/
		padding-top: 1px;
	/*{+END}*/
}
/*{+START,IF,{$NOT,{$MOBILE}}}*/
	.trinav_mid.text>span:before {
		content: "(";
	}
	.trinav_mid.text>span:after {
		content: ")";
	}
/*{+END}*/
.trinav_right {
	float: right;
	/*{+START,IF,{$NOT,{$MOBILE}}}*/
		margin-left: 1em;
		margin-right: 2em;
	/*{+END}*/
	/*{+START,IF,{$MOBILE}}*/
		width: 110px;
		margin-right: 0.5em;
	/*{+END}*/
	text-align: right;
}

/* An inline avatar */
.embedded_mini_avatar {
	width: 0.9em;
	height: 0.9em;
	vertical-align: bottom;
	cursor: pointer;
	border: 1px solid {$GET,standard_border};
}

/* Error/status messages */
span.red_alert, a.red_alert, strong.red_alert, em.red_alert {
	color: {$GET,red_highlight_text};
	font-weight: bold;
}
div.red_alert, p.red_alert, .inline_wip_message {
	{$BETA_CSS_PROPERTY,border-radius: 5px;}
	padding: 1em 1em 1em 40px;
}
/* ... */

